# asset-manager

./: .gitignore  asset_manager_config.py  pyproject.toml  requirements.txt
asset_manager/: __main__.py
asset_manager/api/: asset.py  auth.py  files.py  item.py
asset_manager/api/config/: __init__.py  default_config.py
asset_manager/ui/: assets.py  settings.py  window.py
tests/: conftest.py
tests/api/: test_asset.py
